<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, PrayerListActivity!</string>
    <string name="app_name">Prayer List</string>
    <string name="AddPrayer">Add</string>
    <string name="Active">Active</string>
    <string name="Answered">Answered</string>
    <string name="NoActivePrayers">No Active Prayers</string>
    <string name="Save">Save</string>
    <string name="Prayer">Prayer</string>
    <string name="Description">Description</string>
    <string name="Cancel">Cancel</string>
    <string name="NoTitleText">Please specify a title.</string>
    <string name="Debug">Debug</string>
    <string name="NoAnsweredPrayers">No answered prayer... yet</string>
    <string name="DateAnswered">Date Answered</string>
    <string name="DateFormat">MMMM d, yyyy</string>
    <string name="Delete">Delete</string>
    <string name="DateCreated">Date Created</string>
    <color name="Black">#000</color>
    <string name="Unanswered">Unanswered</string>
    <string name="DeleteConfirm">Are you sure you want to delete the selected prayer(s)?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Share">Share</string>
    <string name="ShareUnansweredPrayerPrefix">I want to share this prayer with you:\n</string>
    <string name="ShareAnsweredPrayerPrefix">My prayer is answered!\n</string>
    <string name="RemindMe">Remind Me</string>
    <string name="NoRemindMe">Don\'t Remind Me</string>
    <string name="Category">Category</string>
    <string name="NewCategory">New Category</string>
    <string name="ClearCategory">Clear Category</string>
    <string name="PickACategory">Pick A Category</string>
    <string name="CategoryName">Category Name</string>
    <string name="ImportPrayers">Import Prayers</string>
    <string name="ExportPrayers">Export Prayers</string>
    <string name="PrayersImportedSuccess">Prayers Imported Successfully</string>
    <string name="PrayersExportedSuccess">Prayers Exported Successfully</string>
    <string name="ImportExportHeader">Import / Export</string>
</resources>
