<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="fill_parent" android:weightSum="1" android:layout_marginLeft="2sp" android:layout_marginRight="2sp">
	    <TextView android:text="@string/Prayer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="25sp"></TextView>
	    <EditText android:layout_height="wrap_content" android:id="@+id/title" android:layout_width="match_parent">
	        <requestFocus></requestFocus>
	    </EditText>
	    <TextView android:text="@string/Description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20sp"></TextView>
	    <EditText android:layout_height="wrap_content" android:id="@+id/description" android:layout_width="match_parent" android:inputType="textMultiLine" android:layout_weight="0.6" android:scrollbars="vertical" android:scrollbarAlwaysDrawVerticalTrack="false" android:gravity="top|left"></EditText>
	</LinearLayout>
	
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
	    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
	        <Button android:text="@string/Cancel" android:id="@+id/cancelButton" android:layout_width="fill_parent" 
	        	android:layout_height="wrap_content" android:layout_weight="1" android:onClick="cancelButton_Click"></Button>
	        <Button android:text="@string/Save" android:id="@+id/saveButton" android:layout_width="fill_parent" 
		        android:layout_height="wrap_content" android:layout_weight="1" android:clickable="true"
		        android:onClick="saveButton_Click"></Button>
	    </LinearLayout>
    </RelativeLayout>    
</RelativeLayout>
