<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout android:layout_width="fill_parent" 
	 android:layout_height="fill_parent" 
	 android:orientation="vertical" 
	 android:background="@color/Black"
	 xmlns:android="http://schemas.android.com/apk/res/android">
     <ListView android:id="@id/android:list"
	     android:layout_centerInParent="true" 
	     android:layout_width="match_parent" 
	     android:layout_height="match_parent" />
	<TextView android:id="@id/android:empty"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:text="@string/NoAnsweredPrayers"/>
    <LinearLayout
		android:id="@+id/actionWrapper"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:weightSum="2"
		android:background="#60ffffff"
		android:paddingTop="4dp" 
		android:orientation="horizontal"
		android:visibility="gone">
		<Button android:text="@string/Unanswered"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:layout_weight="1" 
			android:onClick="prayersUnanswered" />
		<Button android:text="@string/Delete"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:layout_weight="1" 
			android:onClick="deletePrayers" /> 
	</LinearLayout>
 </RelativeLayout>
